--- a/Web/css/style.css
+++ b/Web/css/style.css
@@ -69,8 +69,8 @@ main img{
 main{
 display: flex;
 background-image: url(../şəkillər/Rectangle\ \(1\).svg);
-width: 1838px;
-height: 428px;
+width: 1465px;
+height: 500px;
 } main span{
     margin: 59px 100px;
     font-family: 'Poppins';
@@ -134,6 +134,10 @@ background-color: #109E97;
 padding: 41px ;
 text-align: center;
 color: #fff;
+}
+.daire{ 
+    background-color: #109E97;
+    border-radius: 100px;
 }
     
 
